@@ -1,3 +1,4 @@
 logging.level.root=off
+logging.level.org.apache.kafka=info
 logging.level.com.example=info
 #logging.level.org.springframework.kafka=error
