@@ -1,5 +1,5 @@
 /*
- * Copyright 2018-2020 the original author or authors.
+ * Copyright 2018-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,17 +22,22 @@ import java.lang.annotation.ElementType;
 import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
+import java.lang.reflect.AnnotatedElement;
+import java.lang.reflect.Method;
 import java.util.Map;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 import org.junit.jupiter.api.Test;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.Ordered;
 import org.springframework.core.annotation.AliasFor;
-import org.springframework.kafka.annotation.AliasPropertiesTests.Config.ClassLevelListener;
+import org.springframework.kafka.annotation.AliasPropertiesTests.Config.ClassAndMethodLevelListener;
+import org.springframework.kafka.annotation.KafkaListenerAnnotationBeanPostProcessor.AnnotationEnhancer;
 import org.springframework.kafka.config.ConcurrentKafkaListenerContainerFactory;
 import org.springframework.kafka.config.KafkaListenerConfigUtils;
 import org.springframework.kafka.config.KafkaListenerContainerFactory;
@@ -68,21 +73,60 @@ public class AliasPropertiesTests {
 	private KafkaListenerEndpointRegistry kafkaListenerEndpointRegistry;
 
 	@Autowired
-	private ClassLevelListener classLevel;
+	private ClassAndMethodLevelListener classLevel;
+
+	@Autowired
+	private ClassAndMethodLevelListener repeatable;
 
 	@Test
 	public void testAliasFor() throws Exception {
 		this.template.send("alias.tests", "foo");
 		assertThat(this.config.latch.await(10, TimeUnit.SECONDS)).isTrue();
-		assertThat(this.config.kafkaListenerEndpointRegistry()).isSameAs(this.kafkaListenerEndpointRegistry);
 		assertThat(this.classLevel.latch.await(10, TimeUnit.SECONDS)).isTrue();
+		assertThat(this.repeatable.latch.await(10, TimeUnit.SECONDS)).isTrue();
+		assertThat(this.config.kafkaListenerEndpointRegistry()).isSameAs(this.kafkaListenerEndpointRegistry);
+		assertThat(this.kafkaListenerEndpointRegistry.getListenerContainer("onMethodInConfigClass").getGroupId())
+				.isEqualTo("onMethodInConfigClass.Config.listen1");
+		assertThat(this.kafkaListenerEndpointRegistry.getListenerContainer("onMethod").getGroupId())
+				.isEqualTo("onMethod.ClassAndMethodLevelListener.listen1");
+		assertThat(this.kafkaListenerEndpointRegistry.getListenerContainer("onClass").getGroupId())
+				.isEqualTo("onClass.ClassAndMethodLevelListener");
+		assertThat(this.kafkaListenerEndpointRegistry.getListenerContainer("onMethodRepeatable1").getGroupId())
+				.isEqualTo("onMethodRepeatable1.RepeatableClassAndMethodLevelListener.listen1");
+		assertThat(this.kafkaListenerEndpointRegistry.getListenerContainer("onClassRepeatable1").getGroupId())
+				.isEqualTo("onClassRepeatable1.RepeatableClassAndMethodLevelListener");
+		assertThat(this.kafkaListenerEndpointRegistry.getListenerContainer("onMethodRepeatable2").getGroupId())
+				.isEqualTo("onMethodRepeatable2.RepeatableClassAndMethodLevelListener.listen1");
+		assertThat(this.kafkaListenerEndpointRegistry.getListenerContainer("onClassRepeatable2").getGroupId())
+				.isEqualTo("onClassRepeatable2.RepeatableClassAndMethodLevelListener");
+		assertThat(this.config.orderedCalledFirst).isTrue();
+		assertThat(Config.orderedCalledFirst.get()).isTrue();
 	}
 
 	@Configuration
 	@EnableKafka
 	public static class Config {
 
-		private final CountDownLatch latch = new CountDownLatch(1);
+		final CountDownLatch latch = new CountDownLatch(1);
+
+		static AtomicBoolean orderedCalledFirst = new AtomicBoolean(true);
+
+		@Bean
+		public static AnnotationEnhancer mainEnhancer() {
+			return (attrs, element) -> {
+				attrs.put("groupId", attrs.get("id") + "." + (element instanceof Class
+						? ((Class<?>) element).getSimpleName()
+						: ((Method) element).getDeclaringClass().getSimpleName()
+								+  "." + ((Method) element).getName()));
+				orderedCalledFirst.set(true);
+				return attrs;
+			};
+		}
+
+		@Bean
+		public static OrderedEnhancer ordered() {
+			return new OrderedEnhancer(orderedCalledFirst);
+		}
 
 		@Bean(KafkaListenerConfigUtils.KAFKA_LISTENER_ENDPOINT_REGISTRY_BEAN_NAME)
 		public KafkaListenerEndpointRegistry kafkaListenerEndpointRegistry() {
@@ -129,20 +173,66 @@ public class AliasPropertiesTests {
 			return KafkaTestUtils.producerProps(embeddedKafka());
 		}
 
-		@MyListener(id = "onMethod", value = "alias.tests")
+		@MyListener(id = "onMethodInConfigClass", value = "alias.tests")
 		public void listen1(String in) {
 			this.latch.countDown();
 		}
 
 		@Component
 		@MyListener(id = "onClass", value = "alias.tests")
-		public static class ClassLevelListener {
+		public static class ClassAndMethodLevelListener {
 
-			private final CountDownLatch latch = new CountDownLatch(1);
+			private final CountDownLatch latch = new CountDownLatch(2);
 
 			@KafkaHandler
 			void listen(String in) {
 				this.latch.countDown();
+			}
+
+			@MyListener(id = "onMethod", value = "alias.tests")
+			public void listen1(String in) {
+				this.latch.countDown();
+			}
+
+		}
+
+		@Component
+		@KafkaListener(id = "onClassRepeatable1", topics = "alias.tests")
+		@KafkaListener(id = "onClassRepeatable2", topics = "alias.tests")
+		public static class RepeatableClassAndMethodLevelListener {
+
+			private final CountDownLatch latch = new CountDownLatch(4);
+
+			@KafkaHandler
+			void listen(String in) {
+				this.latch.countDown();
+			}
+
+			@KafkaListener(id = "onMethodRepeatable1", topics = "alias.tests")
+			@KafkaListener(id = "onMethodRepeatable2", topics = "alias.tests")
+			public void listen1(String in) {
+				this.latch.countDown();
+			}
+
+		}
+
+		public static class OrderedEnhancer implements AnnotationEnhancer, Ordered {
+
+			private final AtomicBoolean orderedCalledFirst;
+
+			public OrderedEnhancer(AtomicBoolean orderedCalledFirst) {
+				this.orderedCalledFirst = orderedCalledFirst;
+			}
+
+			@Override
+			public Map<String, Object> apply(Map<String, Object> attrs, AnnotatedElement ele) {
+				this.orderedCalledFirst.set(false);
+				return attrs;
+			}
+
+			@Override
+			public int getOrder() {
+				return 0;
 			}
 
 		}
